--- a/package.json
+++ b/package.json
@@ -8,19 +8,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@react-pdf/renderer": "^3.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.0",
+    "apexcharts": "^3.48.0",
+    "apollo-link-context": "^1.0.20",
+    "apollo-upload-client": "^18.0.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "buffer": "^6.0.3",
     "clsx": "^2.0.0",
+    "date-fns": "^3.3.1",
+    "formik": "^2.4.5",
+    "graceful-fs": "^4.2.11",
+    "graphql": "^16.8.1",
     "next": "^14.0.2",
+    "node-fetch": "^2.6.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-datepicker": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-select": "^5.8.0",
+    "recharts": "^2.12.3",
+    "stream-browserify": "^3.0.0",
+    "sweetalert2": "^11.10.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "url": "^0.11.3",
+    "yup": "^1.3.3",
     "zod": "^3.22.2"
   },
   "devDependencies": {
@@ -32,8 +54,11 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "9.0.0",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4"
+    "prettier-plugin-tailwindcss": "0.5.4",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "engines": {
     "node": ">=18.17.0"
