--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+    "export":"next export",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "start": "run dev"
+    "start": "next build",
+    "homepage":"https://github.com/leandasilva/tunegociodigital",
+    "deploy":"gh-pages -d build"
   },
   "dependencies": {
     "@apollo/client": "^3.8.9",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.0.18",
+    "@prisma/client": "^5.19.1",
     "@react-pdf/renderer": "^3.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
@@ -27,13 +31,15 @@
     "formik": "^2.4.5",
     "graceful-fs": "^4.2.11",
     "graphql": "^16.8.1",
-    "next": "^14.0.2",
+    "mongodb": "^6.9.0",
+    "next": "^14.2.11",
     "node-fetch": "^2.6.1",
     "postcss": "8.4.31",
-    "react": "18.2.0",
+    "prisma": "^5.19.1",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-datepicker": "^6.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "recharts": "^2.12.3",
@@ -52,8 +58,9 @@
     "@vercel/style-guide": "^5.0.1",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.2.11",
     "eslint-config-prettier": "9.0.0",
+    "gh-pages": "^6.1.1",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "0.5.4",
