--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,9 +26,10 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.js",
     ".next/types/**/*.ts",
     "app/lib/placeholder-data.js",
     "scripts/seed.js"
-, "app/_app.js", "app/dashboard/nuevousuario/page.tsx", "app/dashboard/balance/page.js", "app/ui/iniciosesion.js", "app/ui/dashboard/nav-links.js", "app/ui/dashboard/nav-links-usuario.js", "app/ui/dashboard/nav-links-cajero.js", "app/ui/accordion.js", "app/ui/navbar.js" ],
+, "app/_app.js", "app/dashboard/nuevousuario/pages.tsx", "app/dashboard/balance/pages.js", "app/ui/iniciosesion.js", "app/ui/dashboard/nav-links.js", "app/ui/dashboard/nav-links-usuario.js", "app/ui/dashboard/nav-links-cajero.js", "app/ui/accordion.js", "app/ui/navbar.js", "app/dashboard/administrador/pages.js" ],
   "exclude": ["node_modules"]
 }
