--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "start": "next start",
     "dev": "next dev",
-    "export":"next export",
+    "export": "next export",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
-    "start": "next build",
-    "homepage":"https://github.com/leandasilva/tunegociodigital",
-    "deploy":"gh-pages -d build"
+    "homepage": "https://github.com/leandasilva/tunegociodigital",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@apollo/client": "^3.8.9",
@@ -43,6 +43,7 @@
     "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "recharts": "^2.12.3",
+    "sharp": "^0.33.5",
     "stream-browserify": "^3.0.0",
     "sweetalert2": "^11.10.3",
     "tailwindcss": "3.3.3",
