se actualizo obtener pedidos

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@vercel/postgres": "^0.5.0",
     "apexcharts": "^3.48.0",
     "apollo-link-context": "^1.0.20",
+    "apollo-server": "^3.13.0",
     "apollo-upload-client": "^18.0.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "buffer": "^6.0.3",
     "clsx": "^2.0.0",
+    "compression": "^1.7.4",
     "date-fns": "^3.3.1",
     "formik": "^2.4.5",
     "graceful-fs": "^4.2.11",
